[gd_scene load_steps=4 format=3 uid="uid://ckt5wnil2rjvh"]

[ext_resource type="Script" path="res://character/inventory_ui.gd" id="1_t0udm"]
[ext_resource type="PackedScene" uid="uid://de00klpej03f7" path="res://gui/inventory/inv_slot.tscn" id="2_fa67w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmtpb"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="InventoryUI" type="Control"]
custom_minimum_size = Vector2(500, 270)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0udm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kmtpb")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Prev" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<"

[node name="CharacterName" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Name"
horizontal_alignment = 1

[node name="Next" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"

[node name="EquipmentSlots" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/EquipmentSlots"]
layout_mode = 2

[node name="EquipmtSection" type="Label" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer2"]
layout_mode = 2
text = "Weapon"
horizontal_alignment = 1

[node name="WeaponSlots" type="HBoxContainer" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="WeaponSlot" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer2/WeaponSlots" instance=ExtResource("2_fa67w")]
layout_mode = 2
compatible_equipmt_class = 1
link_key = "HandR"

[node name="WeaponSlot2" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer2/WeaponSlots" instance=ExtResource("2_fa67w")]
layout_mode = 2
compatible_equipmt_class = 1
link_key = "HandL"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/EquipmentSlots"]
layout_mode = 2

[node name="EquipmtSection" type="Label" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer"]
layout_mode = 2
text = "Gear"
horizontal_alignment = 1

[node name="GearSlots" type="HBoxContainer" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HeadSlot" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer/GearSlots" instance=ExtResource("2_fa67w")]
layout_mode = 2
compatible_equipmt_class = 2
link_key = "Head"

[node name="TorsoSlot" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer/GearSlots" instance=ExtResource("2_fa67w")]
layout_mode = 2
compatible_equipmt_class = 3
link_key = "Torso"

[node name="ArmsSlot" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer/GearSlots" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="LegsSlot" parent="PanelContainer/VBoxContainer/EquipmentSlots/VBoxContainer/GearSlots" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="SlotContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9

[node name="InvSlot" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot2" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot3" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot4" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot5" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot6" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot7" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot8" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot9" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot10" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot11" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot12" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot13" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot14" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot15" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot16" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot17" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[node name="InvSlot18" parent="PanelContainer/VBoxContainer/ScrollContainer/SlotContainer" instance=ExtResource("2_fa67w")]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
